# LowPoly

./: .gitignore  CMakeLists.txt  README.md
LowPoly/: CMakeLists.txt
LowPoly/LowPoly/: CMakeLists.txt  LowPoly.cpp  LowPoly.h  point.h
docs/: LowPoly.docx  LowPoly.pptx  README.md  _config.yml  checkpoint.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/checkpoint/: ._checkpoint.md  checkpoint.md
result/: tableAndGraph.xlsx
src/: CMakeLists.txt  LowPoly.cpp  cvutil.h  delauney.h  delauneyCPU.cpp  delauneyCPU.h  delauneyGPU.cu  point.cu  point.h  test.py  triangle.cu  triangle.h
